<resources>
    <string name="app_name">Coopercard Mobile - Android</string>
    <string name="appTitle">Cooper Card</string>
    <string name="addCard">ADICIONAR CARTÃO</string>
    <string name="changePassword">ALTERAR SENHA</string>
    <string name="changeName">ALTERAR APELIDO</string>
    <string name="removeCard">REMOVER CARTÃO</string>
    <string name="cardName">APELIDO</string>
    <string name="cardLimitText">LIMITE</string>
    <string name="lastDigitsText">FINAL DO CARTÃO</string>
    <string name="details">Detalhes</string>
    <string name="cardNick">APELIDO</string>
    <string name="cardLimit">R$%1$.2f</string>
    <string name="cardNumber">**** %s</string>
    <string name="lastDigits">%s</string>
    <string name="cardBalance">SALDO</string>
    <string name="changePass">ALTERAR SENHA</string>
    <string name="changeNick">ALTERAR APELIDO</string>
</resources>