<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D92EB24E"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/details"/>

    <ImageView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetails"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/cardNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cardNick"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintBottom_toTopOf="@id/cardName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lastDigitsText"
        />

    <TextView
        android:id="@+id/cardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cardName"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/cardNick"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lastDigits"/>

    <TextView
        android:id="@+id/limitText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cardLimitText"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardName"
        app:layout_constraintBottom_toTopOf="@id/cardLimit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/cardLimit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cardLimit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/limitText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lastDigitsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/lastDigitsText"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintBottom_toTopOf="@id/lastDigits"
        app:layout_constraintLeft_toRightOf="@id/cardNick"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lastDigits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/lastDigits"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/lastDigitsText"

        app:layout_constraintLeft_toRightOf="@id/cardName"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/changePassCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/changeNickCard"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/changePass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/changePassText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/changePass"
                app:srcCompat="@drawable/ic_padlock"
                />

            <TextView
                android:id="@+id/changePassText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/changePass"
                app:layout_constraintTop_toBottomOf="@id/changePass"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/changeNickCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deteCardCard"
        app:layout_constraintStart_toEndOf="@+id/changePassCard"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/changeNick"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/changeNick"
                app:srcCompat="@drawable/ic_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/changeNickText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/changeNickText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/changeNick"
                app:layout_constraintTop_toBottomOf="@id/changeNick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/deteCardCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/changeNickCard"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/deleteCard"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/removeCard"
                app:srcCompat="@drawable/ic_trash"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/deleteCardText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/deleteCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/removeCard"
                app:layout_constraintTop_toBottomOf="@id/deleteCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>